--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <p id="hint"></p>
     <p id="word"></p>
     <p id="livestext"></p>
+    <p id="score">Score: 0</p>
     <!-- <button id="exit">Exit</button>
     <input type="reset" value="Reset" id="resetgame"> -->
 
