--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <input type="reset" value="Reset" id="resetgame"> -->
 
 
-    <br><button id="restart">Restart</button><br><br>
+    <button id="restart">Restart</button>
     <script src="js/hangman.js"></script>
 
 
