--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='css/hangman.css' rel='stylesheet' type='text/css'>
 </head>
 
@@ -16,7 +18,7 @@
     <p id="livestext"></p>
     <p id="score">Score: 0</p>
     <!-- <button id="exit">Exit</button>
-    <input type="reset" value="Reset" id="resetgame"> -->
+            <input type="reset" value="Reset" id="resetgame"> -->
 
 
     <button id="restart">Restart</button>
