--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <p id="word"></p>
     <p id="livestext"></p>
     <p id="score">Score: 0</p>
+    <audio id="audio" src="src/avengers.mp3"></audio>
+    <audio id="audio2" src="src/boo.mp3"></audio>
     <!-- <button id="exit">Exit</button>
             <input type="reset" value="Reset" id="resetgame"> -->
 
